# neuro_fsm

./: README.ru.md  pyproject.toml  run.py
src/: __init__.py
src/neuro_fsm/: __init__.py
src/neuro_fsm/config_parser/: base_config_parser.py  config_keys.py  config_with_profile_parser.py  parser_factory.py  parsing_utils.py  simple_config_parser.py  state_config_parser.py
src/neuro_fsm/config_profiles/: __init__.py  state_machine_config.py
src/neuro_fsm/config_profiles/parsers/: __init__.py  base_dict_parser.py  parser_factory.py  profile_dict_parser.py  state_parser.py
src/neuro_fsm/config_profiles/state_profiles/: __init__.py  profile_names.py  profiles_manager.py  profiles_switcher.py  states_profile.py  states_profile_config.py
src/neuro_fsm/config_profiles/universal_parser/: base_dict_parser.py  base_parser.py  config_keys.py  field_converter.py  field_converter_registry.py  parser_factory.py  profile_dict_parser.py  simple_dict_parser.py
src/neuro_fsm/configs/: __init__.py  fsm_config.py  history_writer_config.py  profile_config.py  state_config.py
src/neuro_fsm/core/: __init__.py  active_profile_view.py  fsm.py  fsm_manager.py  state_machine.py  state_machine_manager.py
src/neuro_fsm/core/counters/: __init__.py  (+2 more)
src/neuro_fsm/counters/: stable_state_counters.py
src/neuro_fsm/history/: base_state_history.py  raw_state_history.py  stable_state_history.py
src/neuro_fsm/history_writer/: __init__.py  async_raw_history_writer.py  async_stable_history_writer.py  base_history_writer.py  csv_history_writer.py  history_writer_factory.py  history_writer_format.py  json_history_writer.py  raw_history_writer.py  stable_history_writer.py  txt_history_writer.py
src/neuro_fsm/models/: __init__.py  enums.py  history_writer_format.py  result.py  state.py  state_meta.py  types.py
src/neuro_fsm/parsers/: __init__.py  config_with_profile_parser.py  parser_factory.py  simple_config_parser.py  state_parser.py
tests/test_configs/: classes.py  simple_dict_cfg.py  state_cls_with_profiles_cfg.py  state_dict_with_profiles_cfg.py  state_other_cls_with_profiles_cfg.py
(+18 files in other folders)
