[project]
name = "neuro-fsm"
version = "0.1.0"
description = ""
authors = [
    {name = "migutin83",email = "138582932+migutin83@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
