[tool.poetry]
name = "neuro-fsm"
version = "0.1.0"
description = ""
authors = ["migutin83 <138582932+migutin83@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "neuro_fsm", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
rich = "^14.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
